style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');

/* Element Selectors */
html, body {
  height: 100%;
}

html, body, footer, footer a {
  width: 100%;
  font-family: 'Poppins', sans-serif;
}

/* Class Selectors */

/* aboutgroups (events) */
.card-text {
  font-size: 14pt;
}

/* front page carousel images */
.carousel-inner img {
  width: 100%;
  height: 100%;
}

/* front page carousel caption */
.carousel-caption {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

/* size of 'join group' button on aboutgroups page */
.createjoin {
  width: 180px;
}

/* three icons on front page,  */
.icons {
  width: 50%;
}

/* background divs */
.loggedInBG {
  background: url("img/loggedin/sky.jpg");
  background-size: cover;
  height: 82%;
}

/* background for createjoin page */
.masthead {
  min-height: 47rem;
  width: 100%;
  background: url("img/createjoin/background.jpg");
  background-position: center center;
  background-size: cover;
}

.modal-content {
  background: #1A75C1;
  color: #FFF;
  
}
.modaluserpw {
  margin-bottom: 20px;
  width: 70%
}
.loginmodal-submit {
  background: #FFF;
  color: #1A75C1;
  width: 70%;
}
.c {
  align-content: center;
  margin-bottom: 10px;
  width: 70%;
  
}
/* links in navbar */
.nav-link {
  font-size: 1.1em;
}

/* offsets the navbar when 'about' is clicked */
.navbarOffset {
  top: -130px;
  position: relative;
}

.oneliner {
  width: 80%;
}

/* colors for sign in button in nav bar */
.signin {
  background-color: #FFF;
  color: #1A75C1;
}

/* background color for site footer */
.site-footer {
  background: #273443;
  color: white;
}

/* site footer links */
.site-footer a {
  color: #D5D5D5;
  text-decoration:none;
}
/* hover on site footer links  */
.site-footer a:hover {
  color: white;
}


/* copyright in footer */
#copyright {
  background-color: #232F3C;
}

/* images on mygroups page */
img.mr-2 {
  width: 100px;
  height: 100px;
  border: 1px solid #8c8c8c;
}

/* ID Selectors */

/* content of mygroups page */
#content {
  font-size: 12pt;
  color: #F6F6F6;
}

/* title of main div containers */
#main {
  font-size: 20pt;
}

/* smaller text bodies of main div containers */
#maintext {
  color: #F6F6F6;
  font-size: 14pt;
}

/* colour for buttons (most pages) */
.submitButton {
  background-color: #1A75C1;
}

.modaluserpw {
  width: 100%;
}


/* colour of title text for most pages */
.title {
  color: #F6F6F6;
}

/*---Media Queries --*/
@media (max-width: 992px) {

}
@media (max-width: 768px) {
  
}


@media (max-width: 576px) {

  /* hides carousel captions */
  .carousel-caption h1, .carousel-caption h3 {
    display: none;
  }

  /* card title to smaller size (home page, aboutgroup) */
  .card-title {
    font-size: 14pt;
  }

  /* title for createjoin page */
  .createheading {
    display: none;
  }

  /* used to center text */
  .textcenter{
    text-align: center;
  }
}

